syntax = "proto3";
package risk;
option go_package = "github.com/abdoElHodaky/tradSys/proto/risk";

import "proto/orders/orders.proto";

message RiskCheckRequest {
  orders.Order order = 1;
}

message RiskCheckResponse {
  bool approved = 1;
  string reason = 2;
}

message PositionRequest {
  string symbol = 1;
  string account_id = 2;
}

message Position {
  string symbol = 1;
  string account_id = 2;
  double quantity = 3;
  double average_price = 4;
  double unrealized_pnl = 5;
  double realized_pnl = 6;
  int64 timestamp = 7;
}

message PositionList {
  repeated Position positions = 1;
}

message RiskLimitRequest {
  string account_id = 1;
  string symbol = 2;
}

message RiskLimit {
  string account_id = 1;
  string symbol = 2;
  double max_position = 3;
  double max_order_size = 4;
  double max_daily_loss = 5;
  double current_daily_loss = 6;
  bool active = 7;
}

message CircuitBreakerRequest {
  string symbol = 1;
}

message CircuitBreakerStatus {
  string symbol = 1;
  bool triggered = 2;
  string reason = 3;
  int64 trigger_time = 4;
  int64 reset_time = 5;
}

service RiskService {
  rpc CheckOrderRisk(RiskCheckRequest) returns (RiskCheckResponse);
  rpc GetPosition(PositionRequest) returns (Position);
  rpc GetAllPositions(PositionRequest) returns (PositionList);
  rpc GetRiskLimits(RiskLimitRequest) returns (RiskLimit);
  rpc GetCircuitBreakerStatus(CircuitBreakerRequest) returns (CircuitBreakerStatus);
}

