package main

import (
	"context"
	"fmt"
	"time"

	"github.com/abdoElHodaky/tradSys/internal/exchange/connectors"
	"github.com/abdoElHodaky/tradSys/internal/exchange/connectors/plugin"
	"github.com/abdoElHodaky/tradSys/proto/marketdata"
	"github.com/abdoElHodaky/tradSys/proto/orders"
	"go.uber.org/zap"
)

// PluginInfo contains information about the plugin
var PluginInfo = &plugin.PluginInfo{
	Name:           "Example Exchange Connector",
	Version:        "1.0.0",
	Author:         "TradSys Team",
	Description:    "An example exchange connector plugin",
	ExchangeName:   "example-exchange",
	APIVersion:     "1.0.0",
	MinCoreVersion: "1.0.0",
	MaxCoreVersion: "",
	Dependencies:   []string{},
}

// CreateConnector creates an exchange connector
func CreateConnector(config connectors.ExchangeConfig, logger *zap.Logger) (connectors.ExchangeConnector, error) {
	return NewExampleConnector(config, logger)
}

// InitializePlugin initializes the plugin
func InitializePlugin() error {
	// Perform any initialization here
	return nil
}

// ShutdownPlugin shuts down the plugin
func ShutdownPlugin() error {
	// Perform any cleanup here
	return nil
}

// ExampleConnector implements the ExchangeConnector interface
type ExampleConnector struct {
	config connectors.ExchangeConfig
	logger *zap.Logger
	initialized bool
}

// NewExampleConnector creates a new example connector
func NewExampleConnector(config connectors.ExchangeConfig, logger *zap.Logger) (*ExampleConnector, error) {
	return &ExampleConnector{
		config: config,
		logger: logger,
	}, nil
}

// Initialize initializes the exchange connector
func (c *ExampleConnector) Initialize(ctx context.Context) error {
	c.logger.Info("Initializing example exchange connector")
	
	// Simulate initialization delay
	select {
	case <-time.After(500 * time.Millisecond):
	case <-ctx.Done():
		return fmt.Errorf("initialization canceled: %w", ctx.Err())
	}
	
	c.initialized = true
	c.logger.Info("Example exchange connector initialized")
	
	return nil
}

// GetName returns the name of the exchange
func (c *ExampleConnector) GetName() string {
	return "example-exchange"
}

// GetMarketData gets market data for a symbol
func (c *ExampleConnector) GetMarketData(ctx context.Context, symbol string) (*marketdata.MarketDataResponse, error) {
	c.logger.Info("Getting market data", zap.String("symbol", symbol))
	
	// Simulate API call delay
	select {
	case <-time.After(100 * time.Millisecond):
	case <-ctx.Done():
		return nil, fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	// Return placeholder data
	return &marketdata.MarketDataResponse{
		Symbol: symbol,
		Price:  1000.0,
		Volume: 100.0,
		Bid:    999.0,
		Ask:    1001.0,
		Time:   time.Now().Unix(),
	}, nil
}

// SubscribeMarketData subscribes to market data for a symbol
func (c *ExampleConnector) SubscribeMarketData(ctx context.Context, symbol string, callback func(*marketdata.MarketDataResponse)) error {
	c.logger.Info("Subscribing to market data", zap.String("symbol", symbol))
	
	// Start a goroutine to simulate market data updates
	go func() {
		ticker := time.NewTicker(1 * time.Second)
		defer ticker.Stop()
		
		for {
			select {
			case <-ticker.C:
				// Generate random market data
				data := &marketdata.MarketDataResponse{
					Symbol: symbol,
					Price:  1000.0 + float64(time.Now().UnixNano()%100)/100.0,
					Volume: 100.0 + float64(time.Now().UnixNano()%100),
					Bid:    999.0 + float64(time.Now().UnixNano()%100)/100.0,
					Ask:    1001.0 + float64(time.Now().UnixNano()%100)/100.0,
					Time:   time.Now().Unix(),
				}
				
				// Call the callback
				callback(data)
				
			case <-ctx.Done():
				c.logger.Info("Market data subscription canceled", zap.String("symbol", symbol))
				return
			}
		}
	}()
	
	return nil
}

// UnsubscribeMarketData unsubscribes from market data for a symbol
func (c *ExampleConnector) UnsubscribeMarketData(ctx context.Context, symbol string) error {
	c.logger.Info("Unsubscribing from market data", zap.String("symbol", symbol))
	// In a real implementation, we would cancel the subscription
	return nil
}

// PlaceOrder places an order
func (c *ExampleConnector) PlaceOrder(ctx context.Context, order *orders.OrderRequest) (*orders.OrderResponse, error) {
	c.logger.Info("Placing order", 
		zap.String("symbol", order.Symbol),
		zap.String("side", order.Side),
		zap.Float64("price", order.Price),
		zap.Float64("quantity", order.Quantity))
	
	// Simulate API call delay
	select {
	case <-time.After(200 * time.Millisecond):
	case <-ctx.Done():
		return nil, fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	// Return placeholder data
	return &orders.OrderResponse{
		OrderID:   fmt.Sprintf("order-%d", time.Now().UnixNano()),
		Symbol:    order.Symbol,
		Side:      order.Side,
		Price:     order.Price,
		Quantity:  order.Quantity,
		Status:    "FILLED",
		CreatedAt: time.Now().Unix(),
		UpdatedAt: time.Now().Unix(),
	}, nil
}

// CancelOrder cancels an order
func (c *ExampleConnector) CancelOrder(ctx context.Context, orderID string) error {
	c.logger.Info("Canceling order", zap.String("order_id", orderID))
	
	// Simulate API call delay
	select {
	case <-time.After(100 * time.Millisecond):
	case <-ctx.Done():
		return fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	return nil
}

// GetOrder gets an order
func (c *ExampleConnector) GetOrder(ctx context.Context, orderID string) (*orders.OrderResponse, error) {
	c.logger.Info("Getting order", zap.String("order_id", orderID))
	
	// Simulate API call delay
	select {
	case <-time.After(100 * time.Millisecond):
	case <-ctx.Done():
		return nil, fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	// Return placeholder data
	return &orders.OrderResponse{
		OrderID:   orderID,
		Symbol:    "BTC-USD",
		Side:      "BUY",
		Price:     1000.0,
		Quantity:  1.0,
		Status:    "FILLED",
		CreatedAt: time.Now().Unix() - 3600,
		UpdatedAt: time.Now().Unix(),
	}, nil
}

// GetOpenOrders gets open orders
func (c *ExampleConnector) GetOpenOrders(ctx context.Context, symbol string) ([]*orders.OrderResponse, error) {
	c.logger.Info("Getting open orders", zap.String("symbol", symbol))
	
	// Simulate API call delay
	select {
	case <-time.After(200 * time.Millisecond):
	case <-ctx.Done():
		return nil, fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	// Return placeholder data
	return []*orders.OrderResponse{
		{
			OrderID:   fmt.Sprintf("order-%d", time.Now().UnixNano()-1000),
			Symbol:    symbol,
			Side:      "BUY",
			Price:     1000.0,
			Quantity:  1.0,
			Status:    "OPEN",
			CreatedAt: time.Now().Unix() - 3600,
			UpdatedAt: time.Now().Unix(),
		},
		{
			OrderID:   fmt.Sprintf("order-%d", time.Now().UnixNano()-2000),
			Symbol:    symbol,
			Side:      "SELL",
			Price:     1100.0,
			Quantity:  0.5,
			Status:    "OPEN",
			CreatedAt: time.Now().Unix() - 1800,
			UpdatedAt: time.Now().Unix(),
		},
	}, nil
}

// GetAccountInfo gets account information
func (c *ExampleConnector) GetAccountInfo(ctx context.Context) (*connectors.AccountInfo, error) {
	c.logger.Info("Getting account information")
	
	// Simulate API call delay
	select {
	case <-time.After(200 * time.Millisecond):
	case <-ctx.Done():
		return nil, fmt.Errorf("request canceled: %w", ctx.Err())
	}
	
	// Return placeholder data
	return &connectors.AccountInfo{
		Balances: map[string]connectors.Balance{
			"BTC": {
				Free:   1.0,
				Locked: 0.5,
				Total:  1.5,
			},
			"USD": {
				Free:   10000.0,
				Locked: 5000.0,
				Total:  15000.0,
			},
		},
		TotalEquity:      20000.0,
		AvailableEquity:  15000.0,
		Margin:           5000.0,
		UnrealizedPnL:    1000.0,
	}, nil
}

// Close closes the exchange connector
func (c *ExampleConnector) Close() error {
	c.logger.Info("Closing example exchange connector")
	
	// Perform any cleanup here
	c.initialized = false
	
	return nil
}

